# sigil

./: .env.example  .gitignore  .sec3-allowlist.txt  .vercelignore  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FULL-SYSTEM-AUDIT-2026-04-03.md  NOTICE  ON-CHAIN-IMPLEMENTATION-PLAN.md  README.md  SDK-IMPLEMENTATION-PLAN.md  SECURITY.md  TASKS.md  WRAP-ARCHITECTURE-PLAN-v5.md  WRAP-ARCHITECTURE-PLAN.md  WRAP-DISCRIMINATOR-TABLES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  txtx.yml  vercel.json
.changeset/: README.md  alt-support-kit.md  audit-findings-batch-1.md  audit-fixes-h1-m1-sdk.md  c1-preview-create-vault.md  config.json  dx-convenience-layer.md  lane-a-c6-c2-c5.md  mcp-audit-fixes.md  mcp-v2-default.md  phase-2-post-assertions.md  pr1b-silent-failure-hardening.md  pr2a-error-taxonomy-unification.md  pr2c-kit-adapter-barrel.md  pr3a-factory-migration.md  remove-position-counter.md  remove-protocol-bloat.md  sdk-phase1a-quick-wins.md  sdk-s14-get-overview.md  sprint-1-sdk-surface.md  sprint-2-sigil-facade.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: pre-push
api/: discovery.ts
docs/: ARCHITECTURE.md  BARREL-AUDIT.md  COMMANDS-REFERENCE.md  DEPLOYMENT.md  ERROR-CODES.md  INSTRUCTIONS.md  ONCHAIN-FEATURE-INVENTORY.md  PROJECT.md  RFC-ACTIONTYPE-ELIMINATION.md  SDK-REDESIGN-PLAN.md  SECURITY-FINDINGS-2026-04-07.md  SECURITY.md
programs/agent-shield/: Cargo.toml
programs/agent-shield/src/: errors.rs  events.rs  lib.rs  oracle.rs
programs/agent-shield/src/certora/specs/: access_control.rs  mod.rs  session_lifecycle.rs  spending_caps.rs
programs/agent-shield/src/instructions/: agent_transfer.rs  apply_pending_policy.rs  close_vault.rs  finalize_session.rs  initialize_oracle_registry.rs  initialize_vault.rs  mod.rs  queue_policy_update.rs  reactivate_vault.rs  update_oracle_registry.rs  update_policy.rs  utils.rs  validate_and_authorize.rs
programs/agent-shield/src/state/: mod.rs  pending_policy.rs  policy.rs  registry.rs  tracker.rs  vault.rs
programs/mock-defi/: Cargo.toml
programs/phalnx/: Cargo.toml
programs/phalnx/archived-oracle/: ORACLE_REMOVAL.md  apply_oracle_update.txt  initialize_oracle_registry.txt  oracle.txt  propose_oracle_authority.txt  update_oracle_registry.txt
programs/phalnx/src/: errors.rs  events.rs  lib.rs
programs/phalnx/src/certora/envs/: cvlr_summaries.txt
programs/phalnx/src/certora/specs/: access_control.rs  session_lifecycle.rs
programs/phalnx/src/instructions/: agent_transfer.rs  apply_constraints_update.rs  apply_pending_policy.rs  cancel_constraints_update.rs  cancel_pending_policy.rs  close_instruction_constraints.rs  close_settled_escrow.rs  close_vault.rs  create_escrow.rs  create_instruction_constraints.rs  deposit_funds.rs  finalize_session.rs  initialize_vault.rs  mod.rs  queue_constraints_update.rs  queue_policy_update.rs  reactivate_vault.rs  refund_escrow.rs  register_agent.rs  revoke_agent.rs  settle_escrow.rs  sync_positions.rs  update_agent_permissions.rs  update_instruction_constraints.rs  update_policy.rs  utils.rs  validate_and_authorize.rs  withdraw_funds.rs
programs/phalnx/src/instructions/integrations/: flash_trade.rs  generic_constraints.rs  jupiter.rs  jupiter_lend.rs  mod.rs
programs/phalnx/src/state/: agent_spend_overlay.rs  constraints.rs  mod.rs  pending_constraints.rs  pending_policy.rs  policy.rs  session.rs  tracker.rs  vault.rs
programs/sigil/: Cargo.toml
programs/sigil/archived-oracle/: ORACLE_REMOVAL.md  accept_oracle_authority.txt  cancel_oracle_update.txt  pending_oracle_update.txt  queue_oracle_update.txt  registry.txt
programs/sigil/src/: errors.rs  events.rs  lib.rs
programs/sigil/src/certora/envs/: cvlr_inlining.txt
programs/sigil/src/certora/specs/: access_control.rs  session_lifecycle.rs
programs/sigil/src/instructions/: agent_transfer.rs  allocate_constraints_pda.rs  allocate_pending_constraints_pda.rs  apply_agent_permissions_update.rs  apply_close_constraints.rs  apply_constraints_update.rs  apply_pending_policy.rs  cancel_agent_permissions_update.rs  cancel_close_constraints.rs  cancel_constraints_update.rs  cancel_pending_policy.rs  close_instruction_constraints.rs  close_post_assertions.rs  close_settled_escrow.rs  close_vault.rs  create_escrow.rs  create_instruction_constraints.rs  create_post_assertions.rs  deposit_funds.rs  extend_pda.rs  finalize_session.rs  freeze_vault.rs  initialize_vault.rs  mod.rs  pause_agent.rs  queue_agent_permissions_update.rs  queue_close_constraints.rs  queue_constraints_update.rs  queue_policy_update.rs  reactivate_vault.rs  refund_escrow.rs  register_agent.rs  revoke_agent.rs  settle_escrow.rs  sync_positions.rs  unpause_agent.rs  update_agent_permissions.rs  update_instruction_constraints.rs  update_policy.rs  utils.rs  (+2 more)
programs/sigil/src/instructions/integrations/: generic_constraints.rs  jupiter.rs  mod.rs
programs/sigil/src/state/: agent_spend_overlay.rs  constraints.rs  escrow.rs  mod.rs  pending_agent_perms.rs  pending_close_constraints.rs  pending_constraints.rs  pending_policy.rs  policy.rs  post_assertions.rs  session.rs  tracker.rs  vault.rs
scripts/: add-protocol.ts  codemod-error-helpers.py  extend-phalnx-alt.ts  extend-sigil-alt.ts  gen-error-types.ts  rebuild-mock-defi.sh  run-certora.sh  test-counts.json  update-test-counts.js  verify-codama-staleness.ts  verify-error-drift.ts  verify-program.ts  verify-test-counts.js
tests/: agent-shield.ts  analytics-counters.ts  devnet-fees.ts  devnet-oracle.ts  devnet-positions.ts  devnet-routing.ts  devnet-security.ts  devnet-sessions.ts  devnet-smoke.ts  devnet-spending.ts  devnet-timelock.ts  devnet-transfers.ts  escrow-integration.ts  flash-trade-integration.ts  instruction-constraints.ts  jupiter-integration.ts  jupiter-lend-integration.ts  phalnx.ts  post-assertion-integration.ts  (+4 more)
tests/fixtures/mock-defi-src/: Cargo.toml
tests/fixtures/mock-defi-src/src/: lib.rs
trident-tests/: Cargo.toml
trident-tests/fuzz_tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs
(+778 files in other folders)
