[workspace]
members = [
    "programs/*"
]
# Default-members filters cargo operations (without `--workspace` or explicit
# `-p`) to sigil only. mock-defi is a test-only Anchor program that ships no
# production binary and is not formally verified — excluding it from default
# operations keeps `anchor build --features mainnet|certora` and
# `cargo certora-sbf` from tripping on unknown features or "more than one
# cdylib package found" errors. mock-defi is still built by `anchor build
# --no-idl` (which targets all members) and loaded by LiteSVM tests from
# target/deploy/mock_defi.so.
default-members = ["programs/sigil"]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

