[workspace]

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Phalnx fuzz tests (Trident)"
edition = "2021"

[dependencies]
phalnx = { path = "../programs/phalnx" }
trident-fuzz = { version = "0.12.0", features = ["all"] }
borsh = "1.5.3"
solana-sdk = "2.3"
anchor-lang = "0.32.1"
spl-token = "8.0"
spl-associated-token-account = "7.0"

[[bin]]
name = "fuzz_0"
path = "fuzz_tests/fuzz_0/test_fuzz.rs"
