[package]
name = "mock-defi"
version = "0.1.0"
description = "Test-only mock DeFi program. Two no-op instructions (open_position, close_position) with stable 8-byte Anchor discriminators. Loaded by LiteSVM in on-chain tests to exercise Sigil's constraint matching + position counter flow end-to-end. Not deployed to devnet or mainnet."
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_defi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
# Mirror sigil's network / certora feature surface so workspace-wide
# `cargo build --features mainnet|devnet|certora` doesn't fail with "none
# of the selected packages contains these features". All no-ops for the
# mock program — it has no network-specific constants and is not proved.
mainnet = []
devnet = []
devnet-testing = []
certora = []

[dependencies]
anchor-lang = { version = "0.32.1" }
