[package]
name = "phalnx"
version = "0.1.0"
description = "On-chain guardrails for AI agents on Solana - Permission controls, spending limits, and audit infrastructure for autonomous agents (Phalnx)"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "phalnx"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["devnet"]
mainnet = []
devnet = []
devnet-testing = ["devnet"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
certora = ["no-entrypoint", "dep:cvlr"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
solana-program = ">=2"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }

# Pin blake3 to avoid constant_time_eq 0.4.2 which requires edition 2024
# (BPF platform-tools cargo 1.84 doesn't support edition 2024)
blake3 = "=1.5.5"
cvlr = { version = "0.5", optional = true }

[package.metadata.certora]
sources = [
    "Cargo.toml",
    "src/**/*.rs"
]
solana_inlining = ["src/certora/envs/cvlr_inlining.txt"]
solana_summaries = ["src/certora/envs/cvlr_summaries.txt"]
